Removed empty files, Sonar, PMD (#1263)
Co-authored-by: Danny Furnivall <danielfurnivall@gmail.com>