@@ -29,6 +29,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Constants.ACAS_CERT_LIST_DISPLAY;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Constants.ACAS_DOC_TYPE;
@@ -287,7 +288,7 @@ public class Et1VettingService {
             if (CollectionUtils.isNotEmpty(caseData.getJurCodesCollection())) {
                 codeList.stream().filter(codesTypeItem -> caseData.getJurCodesCollection().stream()
                         .map(existingCode -> existingCode.getValue().getJuridictionCodesList())
-                        .collect(Collectors.toList()).stream()
+                        .toList().stream()
                         .anyMatch(code -> code.equals(codesTypeItem.getValue().getEt1VettingJurCodeList())))
                     .forEach(c -> errors
                         .add(String.format(ERROR_EXISTING_JUR_CODE, c.getValue().getEt1VettingJurCodeList())));
@@ -351,7 +352,7 @@ public class Et1VettingService {
             .filter(tribunalOffice -> !tribunalOffice.getOfficeName().equals(managingOffice))
             .map(tribunalOffice ->
                 DynamicValueType.create(tribunalOffice.getOfficeName(), tribunalOffice.getOfficeName()))
-            .collect(Collectors.toList()));
+            .toList());
     }
 
     public String toAddressWithTab(Address address) {
